@@ -2,3 +2,24 @@
 Final Project for CIS 3365
 
 Instructor: Professor Detillier - University of Houston 
+
+Running this application with IntelliJ: 
+
+Project SDK: Java 11; 
+
+Add JFoenix & JavaFX libraries to project (in main project folder)
+Add Microsoft Sql Server Connector jar
+
+Go to Run>Edit configurations>Appication>Main 
+past this string in VM Options
+VM Options: --module-path "[path to javafx lib folder]" --add-modules javafx.controls,javafx.fxml
+click 'apply'
+
+Everything should run correctly now. 
+
+If you have any questions please reach out!!! 
+
+-Amanda D. 
+
+
+
